feat(emi): add Food Buffs and Synergies categories feat(hud): add a draggable overlay placement screen refactor(eating): stop cancelling PlayerEntity#eatFood fix(sync): rebuild the client config payload on every datapack load fix(datapack): gate template/namespace targets on the food component feat(datapack): add #florafare item tags and /florafare buffs feat(tooltip): draw food values as icons, cap tooltip width chore(release): 1.4.0